--- a/1.76/system/common/lib/libSceAppInstUtil.sprx.json
+++ b/1.76/system/common/lib/libSceAppInstUtil.sprx.json
@@ -14,21 +14,141 @@
           "is_export": true,
           "symbols": [
             {
-              "id": 553141365862715469,
-              "hex_id": "07AD27243ED2504D",
-              "encoded_id": "B60nJD7SUE0",
-              "name": null
+              "id": 17838387007377698716,
+              "hex_id": "F78EAE78ACB0EF9C",
+              "encoded_id": "946ueKyw75w",
+              "name": "sceAppInstUtilAppCancelableUnInstall"
             },
             {
-              "id": 734990618891661661,
-              "hex_id": "0A333612E048315D",
-              "encoded_id": "CjM2EuBIMV0",
-              "name": null
+              "id": 10862123509980272656,
+              "hex_id": "96BE03C846CB1810",
+              "encoded_id": "lr4DyEbLGBA",
+              "name": "sceAppInstUtilAppCancelUnInstall"
+            },
+            {
+              "id": 10467764416070587588,
+              "hex_id": "9144F8469C5C94C4",
+              "encoded_id": "kUT4RpxclMQ",
+              "name": "sceAppInstUtilAppExists"
+            },
+            {
+              "id": 15610395565412333752,
+              "hex_id": "D8A3440F2FBC38B8",
+              "encoded_id": "2KNEDy+8OLg",
+              "name": "sceAppInstUtilAppGetAddcontInfo"
             },
             {
               "id": 2571816479961177788,
               "hex_id": "23B0ED766394DEBC",
               "encoded_id": "I7DtdmOU3rw",
+              "name": "sceAppInstUtilAppGetAddcontInfoByContentId"
+            },
+            {
+              "id": 6885260975413740287,
+              "hex_id": "5F8D5C60A16542FF",
+              "encoded_id": "X41cYKFlQv8",
+              "name": "sceAppInstUtilAppGetSize"
+            },
+            {
+              "id": 18070429637521817147,
+              "hex_id": "FAC710039B2DBE3B",
+              "encoded_id": "+scQA5stvjs",
+              "name": "sceAppInstUtilAppInstallAll"
+            },
+            {
+              "id": 7908306714540757082,
+              "hex_id": "6DBFF30E8F09D05A",
+              "encoded_id": "bb-zDo8J0Fo",
+              "name": "sceAppInstUtilAppInstallCloudGame"
+            },
+            {
+              "id": 7967696987286427396,
+              "hex_id": "6E92F231FD285704",
+              "encoded_id": "bpLyMf0oVwQ",
+              "name": "sceAppInstUtilAppInstallPkg"
+            },
+            {
+              "id": 6550310687346230753,
+              "hex_id": "5AE760DD77B785E1",
+              "encoded_id": "Wudg3Xe3heE",
+              "name": "sceAppInstUtilAppInstallTitleDir"
+            },
+            {
+              "id": 734990618891661661,
+              "hex_id": "0A333612E048315D",
+              "encoded_id": "CjM2EuBIMV0",
+              "name": "sceAppInstUtilAppIsInUpdating"
+            },
+            {
+              "id": 10271777099778473366,
+              "hex_id": "8E8CAED99C49BD96",
+              "encoded_id": "joyu2ZxJvZY",
+              "name": "sceAppInstUtilAppPrepareOverwritePkg"
+            },
+            {
+              "id": 18352829190865054587,
+              "hex_id": "FEB258E960EE6B7B",
+              "encoded_id": "-rJY6WDua3s",
+              "name": "sceAppInstUtilAppSetSavedataUploadStatus"
+            },
+            {
+              "id": 5412785032887562689,
+              "hex_id": "4B1E134F2AD071C1",
+              "encoded_id": "Sx4TTyrQccE",
+              "name": "sceAppInstUtilAppUnInstall"
+            },
+            {
+              "id": 5824355676164461995,
+              "hex_id": "50D444A0F35015AB",
+              "encoded_id": "UNREoPNQFas",
+              "name": "sceAppInstUtilAppUnInstallAddcont"
+            },
+            {
+              "id": 10468250222808750138,
+              "hex_id": "9146B21D4E6B583A",
+              "encoded_id": "kUayHU5rWDo",
+              "name": "sceAppInstUtilAppUnInstallPat"
+            },
+            {
+              "id": 17376516457321793688,
+              "hex_id": "F125C9A738650898",
+              "encoded_id": "8SXJpzhlCJg",
+              "name": "sceAppInstUtilAppUnInstallTypes"
+            },
+            {
+              "id": 18427099157653768933,
+              "hex_id": "FFBA350D8CDA4AE5",
+              "encoded_id": "-7o1DYzaSuU",
+              "name": "sceAppInstUtilAppUpdateStartTime"
+            },
+            {
+              "id": 6457561821419531869,
+              "hex_id": "599DDE4350D5EE5D",
+              "encoded_id": "WZ3eQ1DV7l0",
+              "name": "sceAppInstUtilGetAddcontInstalledStatus"
+            },
+            {
+              "id": 3817345967501608703,
+              "hex_id": "34F9EFEEA9B406FF",
+              "encoded_id": "NPnv7qm0Bv8",
+              "name": "sceAppInstUtilGetInstallProgress"
+            },
+            {
+              "id": 16685033575744774257,
+              "hex_id": "E78D25A2D3BBA071",
+              "encoded_id": "540lotO7oHE",
+              "name": "sceAppInstUtilInitialize"
+            },
+            {
+              "id": 10426636665939421662,
+              "hex_id": "90B2DACE1361E9DE",
+              "encoded_id": "kLLazhNh6d4",
+              "name": "sceAppInstUtilTerminate"
+            },
+            {
+              "id": 553141365862715469,
+              "hex_id": "07AD27243ED2504D",
+              "encoded_id": "B60nJD7SUE0",
               "name": null
             },
             {
@@ -38,57 +158,9 @@
               "name": null
             },
             {
-              "id": 3817345967501608703,
-              "hex_id": "34F9EFEEA9B406FF",
-              "encoded_id": "NPnv7qm0Bv8",
-              "name": null
-            },
-            {
-              "id": 5412785032887562689,
-              "hex_id": "4B1E134F2AD071C1",
-              "encoded_id": "Sx4TTyrQccE",
-              "name": null
-            },
-            {
-              "id": 5824355676164461995,
-              "hex_id": "50D444A0F35015AB",
-              "encoded_id": "UNREoPNQFas",
-              "name": null
-            },
-            {
-              "id": 6457561821419531869,
-              "hex_id": "599DDE4350D5EE5D",
-              "encoded_id": "WZ3eQ1DV7l0",
-              "name": null
-            },
-            {
-              "id": 6550310687346230753,
-              "hex_id": "5AE760DD77B785E1",
-              "encoded_id": "Wudg3Xe3heE",
-              "name": null
-            },
-            {
-              "id": 6885260975413740287,
-              "hex_id": "5F8D5C60A16542FF",
-              "encoded_id": "X41cYKFlQv8",
-              "name": null
-            },
-            {
               "id": 7648949327018274851,
               "hex_id": "6A2686E315E33023",
               "encoded_id": "aiaG4xXjMCM",
-              "name": null
-            },
-            {
-              "id": 7908306714540757082,
-              "hex_id": "6DBFF30E8F09D05A",
-              "encoded_id": "bb-zDo8J0Fo",
-              "name": null
-            },
-            {
-              "id": 7967696987286427396,
-              "hex_id": "6E92F231FD285704",
-              "encoded_id": "bpLyMf0oVwQ",
               "name": null
             },
             {
@@ -98,81 +170,9 @@
               "name": null
             },
             {
-              "id": 10271777099778473366,
-              "hex_id": "8E8CAED99C49BD96",
-              "encoded_id": "joyu2ZxJvZY",
-              "name": null
-            },
-            {
-              "id": 10426636665939421662,
-              "hex_id": "90B2DACE1361E9DE",
-              "encoded_id": "kLLazhNh6d4",
-              "name": null
-            },
-            {
-              "id": 10467764416070587588,
-              "hex_id": "9144F8469C5C94C4",
-              "encoded_id": "kUT4RpxclMQ",
-              "name": null
-            },
-            {
-              "id": 10468250222808750138,
-              "hex_id": "9146B21D4E6B583A",
-              "encoded_id": "kUayHU5rWDo",
-              "name": null
-            },
-            {
-              "id": 10862123509980272656,
-              "hex_id": "96BE03C846CB1810",
-              "encoded_id": "lr4DyEbLGBA",
-              "name": null
-            },
-            {
-              "id": 15610395565412333752,
-              "hex_id": "D8A3440F2FBC38B8",
-              "encoded_id": "2KNEDy+8OLg",
-              "name": null
-            },
-            {
-              "id": 16685033575744774257,
-              "hex_id": "E78D25A2D3BBA071",
-              "encoded_id": "540lotO7oHE",
-              "name": null
-            },
-            {
-              "id": 17376516457321793688,
-              "hex_id": "F125C9A738650898",
-              "encoded_id": "8SXJpzhlCJg",
-              "name": null
-            },
-            {
               "id": 17445923171243377985,
               "hex_id": "F21C5EB118B7C541",
               "encoded_id": "8hxesRi3xUE",
-              "name": null
-            },
-            {
-              "id": 17838387007377698716,
-              "hex_id": "F78EAE78ACB0EF9C",
-              "encoded_id": "946ueKyw75w",
-              "name": null
-            },
-            {
-              "id": 18070429637521817147,
-              "hex_id": "FAC710039B2DBE3B",
-              "encoded_id": "+scQA5stvjs",
-              "name": null
-            },
-            {
-              "id": 18352829190865054587,
-              "hex_id": "FEB258E960EE6B7B",
-              "encoded_id": "-rJY6WDua3s",
-              "name": null
-            },
-            {
-              "id": 18427099157653768933,
-              "hex_id": "FFBA350D8CDA4AE5",
-              "encoded_id": "-7o1DYzaSuU",
               "name": null
             }
           ]
