--- a/1.76/system/common/lib/libSceAppInstUtil.sprx.json
+++ b/1.76/system/common/lib/libSceAppInstUtil.sprx.json
@@ -44,6 +44,18 @@
               "name": "sceAppInstUtilAppGetAddcontInfoByContentId"
             },
             {
+              "id": 7648949327018274851,
+              "hex_id": "6A2686E315E33023",
+              "encoded_id": "aiaG4xXjMCM",
+              "name": "sceAppInstUtilAppGetAddcontList"
+            },
+            {
+              "id": 17445923171243377985,
+              "hex_id": "F21C5EB118B7C541",
+              "encoded_id": "8hxesRi3xUE",
+              "name": "sceAppInstUtilAppGetAddcontListAll"
+            },
+            {
               "id": 6885260975413740287,
               "hex_id": "5F8D5C60A16542FF",
               "encoded_id": "X41cYKFlQv8",
@@ -158,21 +170,9 @@
               "name": null
             },
             {
-              "id": 7648949327018274851,
-              "hex_id": "6A2686E315E33023",
-              "encoded_id": "aiaG4xXjMCM",
-              "name": null
-            },
-            {
               "id": 7992567576739914470,
               "hex_id": "6EEB4DDD56E322E6",
               "encoded_id": "butN3VbjIuY",
-              "name": null
-            },
-            {
-              "id": 17445923171243377985,
-              "hex_id": "F21C5EB118B7C541",
-              "encoded_id": "8hxesRi3xUE",
               "name": null
             }
           ]
