--- a/system/common/lib/libMonoWrapperProfiler.sprx.json
+++ b/system/common/lib/libMonoWrapperProfiler.sprx.json
@@ -61,10 +61,28 @@
           "is_export": false,
           "symbols": [
             {
+              "id": 17025074570885952246,
+              "hex_id": "EC45371E983172F6",
+              "encoded_id": "7EU3HpgxcvY",
+              "name": "mono_free"
+            },
+            {
+              "id": 10795936057528545188,
+              "hex_id": "95D2DEA51ED1EFA4",
+              "encoded_id": "ldLepR7R76Q",
+              "name": "mono_profiler_install"
+            },
+            {
+              "id": 8287691362404050022,
+              "hex_id": "7303CB62502AA466",
+              "encoded_id": "cwPLYlAqpGY",
+              "name": "mono_profiler_install_enter_leave"
+            },
+            {
               "id": 1572787015247972952,
               "hex_id": "15D3A9751733CA58",
               "encoded_id": "FdOpdRczylg",
-              "name": null
+              "name": "mono_profiler_set_events"
             },
             {
               "id": 4828443188930578038,
@@ -73,27 +91,9 @@
               "name": null
             },
             {
-              "id": 8287691362404050022,
-              "hex_id": "7303CB62502AA466",
-              "encoded_id": "cwPLYlAqpGY",
-              "name": null
-            },
-            {
-              "id": 10795936057528545188,
-              "hex_id": "95D2DEA51ED1EFA4",
-              "encoded_id": "ldLepR7R76Q",
-              "name": null
-            },
-            {
               "id": 15870076563718837959,
               "hex_id": "DC3DD68D2AB696C7",
               "encoded_id": "3D3WjSq2lsc",
-              "name": null
-            },
-            {
-              "id": 17025074570885952246,
-              "hex_id": "EC45371E983172F6",
-              "encoded_id": "7EU3HpgxcvY",
               "name": null
             }
           ]
