--- a/system/common/lib/libSceSpSysCallWrapper.sprx.json
+++ b/system/common/lib/libSceSpSysCallWrapper.sprx.json
@@ -14,6 +14,18 @@
           "is_export": true,
           "symbols": [
             {
+              "id": 10189250219884789633,
+              "hex_id": "8D677D170BCDBF81",
+              "encoded_id": "jWd9FwvNv4E",
+              "name": "sceSpGetPid"
+            },
+            {
+              "id": 7116463012454579053,
+              "hex_id": "62C2C167BA8FBB6D",
+              "encoded_id": "YsLBZ7qPu20",
+              "name": "sceSpSelect"
+            },
+            {
               "id": 490276694745057164,
               "hex_id": "06CDD00E67EE878C",
               "encoded_id": "Bs3QDmfuh4w",
@@ -98,12 +110,6 @@
               "name": null
             },
             {
-              "id": 7116463012454579053,
-              "hex_id": "62C2C167BA8FBB6D",
-              "encoded_id": "YsLBZ7qPu20",
-              "name": null
-            },
-            {
               "id": 7557303640690782971,
               "hex_id": "68E0EF9EF323F2FB",
               "encoded_id": "aODvnvMj8vs",
@@ -137,12 +143,6 @@
               "id": 9280026942320342617,
               "hex_id": "80C947561B0EF659",
               "encoded_id": "gMlHVhsO9lk",
-              "name": null
-            },
-            {
-              "id": 10189250219884789633,
-              "hex_id": "8D677D170BCDBF81",
-              "encoded_id": "jWd9FwvNv4E",
               "name": null
             },
             {
