--- a/system/common/lib/libSceClSysCallWrapper.sprx.json
+++ b/system/common/lib/libSceClSysCallWrapper.sprx.json
@@ -18,6 +18,24 @@
           "is_export": true,
           "symbols": [
             {
+              "id": 17834262444635506673,
+              "hex_id": "F78007341396C7F1",
+              "encoded_id": "94AHNBOWx-E",
+              "name": "sceClHttpInit"
+            },
+            {
+              "id": 15792599060312861008,
+              "hex_id": "DB2A952C2E1DA950",
+              "encoded_id": "2yqVLC4dqVA",
+              "name": "sceClNetInit"
+            },
+            {
+              "id": 15783447257306722667,
+              "hex_id": "DB0A11A7FEE1716B",
+              "encoded_id": "2woRp-7hcWs",
+              "name": "sceClSslInit"
+            },
+            {
               "id": 624726761029993893,
               "hex_id": "08AB79ADE0DF85A5",
               "encoded_id": "CKt5reDfhaU",
@@ -336,18 +354,6 @@
               "name": null
             },
             {
-              "id": 15783447257306722667,
-              "hex_id": "DB0A11A7FEE1716B",
-              "encoded_id": "2woRp-7hcWs",
-              "name": null
-            },
-            {
-              "id": 15792599060312861008,
-              "hex_id": "DB2A952C2E1DA950",
-              "encoded_id": "2yqVLC4dqVA",
-              "name": null
-            },
-            {
               "id": 15807143602900688149,
               "hex_id": "DB5E415B647BDD15",
               "encoded_id": "215BW2R73RU",
@@ -423,12 +429,6 @@
               "id": 17729548116226507299,
               "hex_id": "F60C021397E08223",
               "encoded_id": "9gwCE5fggiM",
-              "name": null
-            },
-            {
-              "id": 17834262444635506673,
-              "hex_id": "F78007341396C7F1",
-              "encoded_id": "94AHNBOWx-E",
               "name": null
             },
             {
