--- a/system/common/lib/libSceSpSysCallWrapper.sprx.json
+++ b/system/common/lib/libSceSpSysCallWrapper.sprx.json
@@ -20,286 +20,286 @@
               "name": "sceSpGetPid"
             },
             {
-              "id": 7116463012454579053,
-              "hex_id": "62C2C167BA8FBB6D",
-              "encoded_id": "YsLBZ7qPu20",
-              "name": "sceSpSelect"
+              "id": 5216450191442191211,
+              "hex_id": "48648DCFA96E236B",
+              "encoded_id": "SGSNz6luI2s",
+              "name": "sceSpKernelGettimeofday"
             },
             {
               "id": 490276694745057164,
               "hex_id": "06CDD00E67EE878C",
               "encoded_id": "Bs3QDmfuh4w",
-              "name": null
-            },
-            {
-              "id": 549272238055138219,
-              "hex_id": "079F6830BA42A3AB",
-              "encoded_id": "B59oMLpCo6s",
-              "name": null
-            },
-            {
-              "id": 959289027437225589,
-              "hex_id": "0D501449B5536675",
-              "encoded_id": "DVAUSbVTZnU",
-              "name": null
-            },
-            {
-              "id": 1183178622890735970,
-              "hex_id": "106B7EB0533CF962",
-              "encoded_id": "EGt+sFM8+WI",
-              "name": null
-            },
-            {
-              "id": 1632976485484419821,
-              "hex_id": "16A97F762FDD5AED",
-              "encoded_id": "Fql-di-dWu0",
-              "name": null
+              "name": "sceSpKernelNanosleep"
             },
             {
               "id": 1790127026235825659,
               "hex_id": "18D7CF0BBD9CDDFB",
               "encoded_id": "GNfPC72c3fs",
-              "name": null
-            },
-            {
-              "id": 2365412417092328664,
-              "hex_id": "20D3A20F94161CD8",
-              "encoded_id": "INOiD5QWHNg",
-              "name": null
-            },
-            {
-              "id": 2713055846535005141,
-              "hex_id": "25A6B5EB048403D5",
-              "encoded_id": "Jaa16wSEA9U",
-              "name": null
-            },
-            {
-              "id": 3417783653132553636,
-              "hex_id": "2F6E681FD41A4DA4",
-              "encoded_id": "L25oH9QaTaQ",
-              "name": null
-            },
-            {
-              "id": 3628280861942168038,
-              "hex_id": "325A3E38716939E6",
-              "encoded_id": "Mlo+OHFpOeY",
-              "name": null
-            },
-            {
-              "id": 3964738680859475255,
-              "hex_id": "370594D2FBE13D37",
-              "encoded_id": "NwWU0vvhPTc",
-              "name": null
-            },
-            {
-              "id": 4172309396996605394,
-              "hex_id": "39E7054A6D01C5D2",
-              "encoded_id": "OecFSm0BxdI",
-              "name": null
-            },
-            {
-              "id": 5216450191442191211,
-              "hex_id": "48648DCFA96E236B",
-              "encoded_id": "SGSNz6luI2s",
-              "name": null
-            },
-            {
-              "id": 5438806579599343780,
-              "hex_id": "4B7A85C4A31380A4",
-              "encoded_id": "S3qFxKMTgKQ",
-              "name": null
-            },
-            {
-              "id": 5980698137461447205,
-              "hex_id": "52FFB544D83ADA25",
-              "encoded_id": "Uv+1RNg62iU",
-              "name": null
-            },
-            {
-              "id": 6560438029403152309,
-              "hex_id": "5B0B5BA10989DFB5",
-              "encoded_id": "WwtboQmJ37U",
-              "name": null
-            },
-            {
-              "id": 6560844624224401552,
-              "hex_id": "5B0CCD6CC56D3890",
-              "encoded_id": "WwzNbMVtOJA",
-              "name": null
-            },
-            {
-              "id": 7557303640690782971,
-              "hex_id": "68E0EF9EF323F2FB",
-              "encoded_id": "aODvnvMj8vs",
-              "name": null
-            },
-            {
-              "id": 7656563586326710665,
-              "hex_id": "6A419403FB31C989",
-              "encoded_id": "akGUA-sxyYk",
-              "name": null
-            },
-            {
-              "id": 7758750258144631913,
-              "hex_id": "6BAC9E408DAE5C69",
-              "encoded_id": "a6yeQI2uXGk",
-              "name": null
-            },
-            {
-              "id": 8280167597125421148,
-              "hex_id": "72E9108F335C485C",
-              "encoded_id": "cukQjzNcSFw",
-              "name": null
-            },
-            {
-              "id": 8455010894661645331,
-              "hex_id": "75563B9CB45D7413",
-              "encoded_id": "dVY7nLRddBM",
-              "name": null
-            },
-            {
-              "id": 9280026942320342617,
-              "hex_id": "80C947561B0EF659",
-              "encoded_id": "gMlHVhsO9lk",
-              "name": null
-            },
-            {
-              "id": 10602214990681017127,
-              "hex_id": "9322A25C6FDD0B27",
-              "encoded_id": "kyKiXG-dCyc",
-              "name": null
-            },
-            {
-              "id": 10616013682636469519,
-              "hex_id": "9353A832C43BB50F",
-              "encoded_id": "k1OoMsQ7tQ8",
-              "name": null
-            },
-            {
-              "id": 10845282610437192242,
-              "hex_id": "96822F12CBD47A32",
-              "encoded_id": "loIvEsvUejI",
-              "name": null
-            },
-            {
-              "id": 10912033037267227099,
-              "hex_id": "976F543BA3A3D1DB",
-              "encoded_id": "l29UO6Oj0ds",
-              "name": null
-            },
-            {
-              "id": 12089154789861820162,
-              "hex_id": "A7C54E3AF46D0702",
-              "encoded_id": "p8VOOvRtBwI",
-              "name": null
-            },
-            {
-              "id": 12465458599396245414,
-              "hex_id": "ACFE348D2359FFA6",
-              "encoded_id": "rP40jSNZ-6Y",
-              "name": null
-            },
-            {
-              "id": 12770683651951206177,
-              "hex_id": "B13A951E95709F21",
-              "encoded_id": "sTqVHpVwnyE",
-              "name": null
-            },
-            {
-              "id": 13377331663647617132,
-              "hex_id": "B9A5D4459E4D306C",
-              "encoded_id": "uaXURZ5NMGw",
-              "name": null
-            },
-            {
-              "id": 14208354706259976561,
-              "hex_id": "C52E375385602171",
-              "encoded_id": "xS43U4VgIXE",
-              "name": null
-            },
-            {
-              "id": 14606211332111272606,
-              "hex_id": "CAB3AFD1CCC70A9E",
-              "encoded_id": "yrOv0czHCp4",
-              "name": null
-            },
-            {
-              "id": 14672732863178892665,
-              "hex_id": "CBA004CCB1FA6579",
-              "encoded_id": "y6AEzLH6ZXk",
-              "name": null
-            },
-            {
-              "id": 14899415228462621496,
-              "hex_id": "CEC55B35B58F6338",
-              "encoded_id": "zsVbNbWPYzg",
-              "name": null
-            },
-            {
-              "id": 15105720353966130840,
-              "hex_id": "D1A24CA0DE8A0698",
-              "encoded_id": "0aJMoN6KBpg",
-              "name": null
-            },
-            {
-              "id": 15737567378125968567,
-              "hex_id": "DA67122631F954B7",
-              "encoded_id": "2mcSJjH5VLc",
-              "name": null
-            },
-            {
-              "id": 15850094106818289923,
-              "hex_id": "DBF6D89CDD6AA103",
-              "encoded_id": "2-bYnN1qoQM",
-              "name": null
-            },
-            {
-              "id": 16292189399312183331,
-              "hex_id": "E2197BF05F633023",
-              "encoded_id": "4hl78F9jMCM",
-              "name": null
-            },
-            {
-              "id": 16300298913955795909,
-              "hex_id": "E2364B7FE30553C5",
-              "encoded_id": "4jZLf+MFU8U",
-              "name": null
-            },
-            {
-              "id": 16681008909165979026,
-              "hex_id": "E77ED9391DF6E592",
-              "encoded_id": "537ZOR325ZI",
-              "name": null
-            },
-            {
-              "id": 16704541124060580857,
-              "hex_id": "E7D273A5DB890BF9",
-              "encoded_id": "59JzpduJC-k",
-              "name": null
+              "name": "sceSpNetConnect"
             },
             {
               "id": 17192903138853069081,
               "hex_id": "EE99765019092119",
               "encoded_id": "7pl2UBkJIRk",
-              "name": null
+              "name": "sceSpNetEpollAbort"
+            },
+            {
+              "id": 10845282610437192242,
+              "hex_id": "96822F12CBD47A32",
+              "encoded_id": "loIvEsvUejI",
+              "name": "sceSpNetEpollControl"
+            },
+            {
+              "id": 3417783653132553636,
+              "hex_id": "2F6E681FD41A4DA4",
+              "encoded_id": "L25oH9QaTaQ",
+              "name": "sceSpNetEpollCreate"
+            },
+            {
+              "id": 1183178622890735970,
+              "hex_id": "106B7EB0533CF962",
+              "encoded_id": "EGt+sFM8+WI",
+              "name": "sceSpNetEpollDestroy"
+            },
+            {
+              "id": 13377331663647617132,
+              "hex_id": "B9A5D4459E4D306C",
+              "encoded_id": "uaXURZ5NMGw",
+              "name": "sceSpNetEpollWait"
+            },
+            {
+              "id": 5980698137461447205,
+              "hex_id": "52FFB544D83ADA25",
+              "encoded_id": "Uv+1RNg62iU",
+              "name": "sceSpNetErrnoLoc"
+            },
+            {
+              "id": 12770683651951206177,
+              "hex_id": "B13A951E95709F21",
+              "encoded_id": "sTqVHpVwnyE",
+              "name": "sceSpNetPoolCreate"
+            },
+            {
+              "id": 14606211332111272606,
+              "hex_id": "CAB3AFD1CCC70A9E",
+              "encoded_id": "yrOv0czHCp4",
+              "name": "sceSpNetPoolDestroy"
+            },
+            {
+              "id": 12089154789861820162,
+              "hex_id": "A7C54E3AF46D0702",
+              "encoded_id": "p8VOOvRtBwI",
+              "name": "sceSpNetRecv"
             },
             {
               "id": 17534311653209581625,
               "hex_id": "F356638C3E8CA839",
               "encoded_id": "81ZjjD6MqDk",
-              "name": null
+              "name": "sceSpNetResolverAbort"
+            },
+            {
+              "id": 14672732863178892665,
+              "hex_id": "CBA004CCB1FA6579",
+              "encoded_id": "y6AEzLH6ZXk",
+              "name": "sceSpNetResolverCreate"
+            },
+            {
+              "id": 15737567378125968567,
+              "hex_id": "DA67122631F954B7",
+              "encoded_id": "2mcSJjH5VLc",
+              "name": "sceSpNetResolverDestroy"
+            },
+            {
+              "id": 959289027437225589,
+              "hex_id": "0D501449B5536675",
+              "encoded_id": "DVAUSbVTZnU",
+              "name": "sceSpNetResolverGetError"
+            },
+            {
+              "id": 6560438029403152309,
+              "hex_id": "5B0B5BA10989DFB5",
+              "encoded_id": "WwtboQmJ37U",
+              "name": "sceSpNetResolverStartNtoa"
+            },
+            {
+              "id": 10616013682636469519,
+              "hex_id": "9353A832C43BB50F",
+              "encoded_id": "k1OoMsQ7tQ8",
+              "name": "sceSpNetSend"
+            },
+            {
+              "id": 7656563586326710665,
+              "hex_id": "6A419403FB31C989",
+              "encoded_id": "akGUA-sxyYk",
+              "name": "sceSpNetSetsockopt"
+            },
+            {
+              "id": 10602214990681017127,
+              "hex_id": "9322A25C6FDD0B27",
+              "encoded_id": "kyKiXG-dCyc",
+              "name": "sceSpNetSocket"
+            },
+            {
+              "id": 15850094106818289923,
+              "hex_id": "DBF6D89CDD6AA103",
+              "encoded_id": "2-bYnN1qoQM",
+              "name": "sceSpNetSocketClose"
+            },
+            {
+              "id": 8455010894661645331,
+              "hex_id": "75563B9CB45D7413",
+              "encoded_id": "dVY7nLRddBM",
+              "name": "sceSpPthreadAttrDestroy"
+            },
+            {
+              "id": 6560844624224401552,
+              "hex_id": "5B0CCD6CC56D3890",
+              "encoded_id": "WwzNbMVtOJA",
+              "name": "sceSpPthreadAttrInit"
+            },
+            {
+              "id": 14208354706259976561,
+              "hex_id": "C52E375385602171",
+              "encoded_id": "xS43U4VgIXE",
+              "name": "sceSpPthreadAttrSetinheritsched"
+            },
+            {
+              "id": 3964738680859475255,
+              "hex_id": "370594D2FBE13D37",
+              "encoded_id": "NwWU0vvhPTc",
+              "name": "sceSpPthreadAttrSetschedparam"
             },
             {
               "id": 18346968607827732570,
               "hex_id": "FE9D86BE0ED0A85A",
               "encoded_id": "-p2Gvg7QqFo",
-              "name": null
+              "name": "sceSpPthreadAttrSetstacksize"
+            },
+            {
+              "id": 1632976485484419821,
+              "hex_id": "16A97F762FDD5AED",
+              "encoded_id": "Fql-di-dWu0",
+              "name": "sceSpPthreadCondattrDestroy"
+            },
+            {
+              "id": 16681008909165979026,
+              "hex_id": "E77ED9391DF6E592",
+              "encoded_id": "537ZOR325ZI",
+              "name": "sceSpPthreadCondattrInit"
+            },
+            {
+              "id": 2713055846535005141,
+              "hex_id": "25A6B5EB048403D5",
+              "encoded_id": "Jaa16wSEA9U",
+              "name": "sceSpPthreadCondDestroy"
+            },
+            {
+              "id": 2365412417092328664,
+              "hex_id": "20D3A20F94161CD8",
+              "encoded_id": "INOiD5QWHNg",
+              "name": "sceSpPthreadCondInit"
+            },
+            {
+              "id": 7557303640690782971,
+              "hex_id": "68E0EF9EF323F2FB",
+              "encoded_id": "aODvnvMj8vs",
+              "name": "sceSpPthreadCondSignal"
+            },
+            {
+              "id": 16292189399312183331,
+              "hex_id": "E2197BF05F633023",
+              "encoded_id": "4hl78F9jMCM",
+              "name": "sceSpPthreadCondWait"
             },
             {
               "id": 18427092909856761768,
               "hex_id": "FFBA2F5EDF21A7A8",
               "encoded_id": "-7ovXt8hp6g",
-              "name": null
+              "name": "sceSpPthreadCreate"
+            },
+            {
+              "id": 3628280861942168038,
+              "hex_id": "325A3E38716939E6",
+              "encoded_id": "Mlo+OHFpOeY",
+              "name": "sceSpPthreadDetach"
+            },
+            {
+              "id": 549272238055138219,
+              "hex_id": "079F6830BA42A3AB",
+              "encoded_id": "B59oMLpCo6s",
+              "name": "sceSpPthreadExit"
+            },
+            {
+              "id": 12465458599396245414,
+              "hex_id": "ACFE348D2359FFA6",
+              "encoded_id": "rP40jSNZ-6Y",
+              "name": "sceSpPthreadJoin"
+            },
+            {
+              "id": 16704541124060580857,
+              "hex_id": "E7D273A5DB890BF9",
+              "encoded_id": "59JzpduJC-k",
+              "name": "sceSpPthreadMutexattrDestroy"
+            },
+            {
+              "id": 7758750258144631913,
+              "hex_id": "6BAC9E408DAE5C69",
+              "encoded_id": "a6yeQI2uXGk",
+              "name": "sceSpPthreadMutexattrInit"
+            },
+            {
+              "id": 10912033037267227099,
+              "hex_id": "976F543BA3A3D1DB",
+              "encoded_id": "l29UO6Oj0ds",
+              "name": "sceSpPthreadMutexattrSetprioceiling"
+            },
+            {
+              "id": 16300298913955795909,
+              "hex_id": "E2364B7FE30553C5",
+              "encoded_id": "4jZLf+MFU8U",
+              "name": "sceSpPthreadMutexattrSetprotocol"
+            },
+            {
+              "id": 15105720353966130840,
+              "hex_id": "D1A24CA0DE8A0698",
+              "encoded_id": "0aJMoN6KBpg",
+              "name": "sceSpPthreadMutexattrSettype"
+            },
+            {
+              "id": 9280026942320342617,
+              "hex_id": "80C947561B0EF659",
+              "encoded_id": "gMlHVhsO9lk",
+              "name": "sceSpPthreadMutexDestroy"
+            },
+            {
+              "id": 5438806579599343780,
+              "hex_id": "4B7A85C4A31380A4",
+              "encoded_id": "S3qFxKMTgKQ",
+              "name": "sceSpPthreadMutexInit"
+            },
+            {
+              "id": 8280167597125421148,
+              "hex_id": "72E9108F335C485C",
+              "encoded_id": "cukQjzNcSFw",
+              "name": "sceSpPthreadMutexLock"
+            },
+            {
+              "id": 4172309396996605394,
+              "hex_id": "39E7054A6D01C5D2",
+              "encoded_id": "OecFSm0BxdI",
+              "name": "sceSpPthreadMutexUnlock"
+            },
+            {
+              "id": 14899415228462621496,
+              "hex_id": "CEC55B35B58F6338",
+              "encoded_id": "zsVbNbWPYzg",
+              "name": "sceSpPthreadSetprio"
+            },
+            {
+              "id": 7116463012454579053,
+              "hex_id": "62C2C167BA8FBB6D",
+              "encoded_id": "YsLBZ7qPu20",
+              "name": "sceSpSelect"
             }
           ]
         },
