--- a/system/common/lib/webapp.self.json
+++ b/system/common/lib/webapp.self.json
@@ -232,6 +232,12 @@
               "name": "sceCompositorGetCanvasHandle"
             },
             {
+              "id": 18391116591672058833,
+              "hex_id": "FF3A5F198D67E3D1",
+              "encoded_id": "-zpfGY1n49E",
+              "name": "sceCompositorSetIndirectCanvasCommand"
+            },
+            {
               "id": 3723397085019785490,
               "hex_id": "33AC29EBE2544912",
               "encoded_id": "M6wp6+JUSRI",
@@ -253,12 +259,6 @@
               "id": 15340909294980810402,
               "hex_id": "D4E5DBB962D1C6A2",
               "encoded_id": "1OXbuWLRxqI",
-              "name": null
-            },
-            {
-              "id": 18391116591672058833,
-              "hex_id": "FF3A5F198D67E3D1",
-              "encoded_id": "-zpfGY1n49E",
               "name": null
             }
           ]
