--- a/system_ex/app/NPXS20120/avbaseMiniApp.self.json
+++ b/system_ex/app/NPXS20120/avbaseMiniApp.self.json
@@ -134,6 +134,12 @@
               "name": "open"
             },
             {
+              "id": 11492892849483021034,
+              "hex_id": "9F7EF527970FFAEA",
+              "encoded_id": "n371J5cP+uo",
+              "name": "physhm_open"
+            },
+            {
               "id": 189259624450299762,
               "hex_id": "02A062A02DAF1772",
               "encoded_id": "AqBioC2vF3I",
@@ -683,12 +689,6 @@
               "id": 10617456643700094181,
               "hex_id": "9358C89051DAF4E5",
               "encoded_id": "k1jIkFHa9OU",
-              "name": null
-            },
-            {
-              "id": 11492892849483021034,
-              "hex_id": "9F7EF527970FFAEA",
-              "encoded_id": "n371J5cP+uo",
               "name": null
             }
           ]
