--- a/system/common/lib/WebAppBundle.sprx.json
+++ b/system/common/lib/WebAppBundle.sprx.json
@@ -978,6 +978,13 @@
               "name": "JSValueToStringCopy"
             },
             {
+              "id": 17493794012781918644,
+              "hex_id": "F2C670F7F1B8B9B4",
+              "encoded_id": "8sZw9-G4ubQ",
+              "type": "Object",
+              "name": "kJSClassDefinitionEmpty"
+            },
+            {
               "id": 14960713757503216386,
               "hex_id": "CF9F21E5AE475B02",
               "encoded_id": "z58h5a5HWwI",
@@ -1090,13 +1097,6 @@
               "hex_id": "537110E29D3F1E16",
               "encoded_id": "U3EQ4p0-HhY",
               "name": "WKStringGetTypeID"
-            },
-            {
-              "id": 17493794012781918644,
-              "hex_id": "F2C670F7F1B8B9B4",
-              "encoded_id": "8sZw9-G4ubQ",
-              "type": "Object",
-              "name": null
             }
           ]
         }
