--- a/system/common/lib/webapp.self.json
+++ b/system/common/lib/webapp.self.json
@@ -1193,7 +1193,7 @@
               "id": 18211650069756338506,
               "hex_id": "FCBCC73FBD8B614A",
               "encoded_id": "-LzHP72LYUo",
-              "name": null
+              "name": "sceVideoCoreSetInitialInfo"
             }
           ]
         }
