--- a/system/common/lib/webapp.self.json
+++ b/system/common/lib/webapp.self.json
@@ -55,6 +55,12 @@
               "name": "sceKernelClose"
             },
             {
+              "id": 2623297511407571098,
+              "hex_id": "2467D330139D509A",
+              "encoded_id": "JGfTMBOdUJo",
+              "name": "sceKernelGetFsSandboxRandomWord"
+            },
+            {
               "id": 14068095488279325055,
               "hex_id": "C33BEA4F852A297F",
               "encoded_id": "wzvqT4UqKX8",
@@ -83,12 +89,6 @@
               "hex_id": "E304B37BDD8184B2",
               "encoded_id": "4wSze92BhLI",
               "name": "sceKernelWrite"
-            },
-            {
-              "id": 2623297511407571098,
-              "hex_id": "2467D330139D509A",
-              "encoded_id": "JGfTMBOdUJo",
-              "name": null
             }
           ]
         }
